Fixing stream call